--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Hello GitHub Pages</title>
   </head>
   <body>
-    <h1>Hello, GitHub Pages!</h1>
-    <p>これはまだじかのGitHub Pagesサイトです。</p>
+    <h1>まだじかのメンバーシップ</h1>
+    <p>限定ポッドキャストです。</p>
   </body>
 </html>
